how to create a variant of my custom block so that it has ol or ul block options to pick, all thanks to custom attributes |  make sure variations support inner blocks | how to append classes to blocks | reduce editor window width so buttons are not overlapping |

--- a/wp/wp-content/plugins/listblock/src/editor.scss
+++ b/wp/wp-content/plugins/listblock/src/editor.scss
@@ -7,3 +7,7 @@
 .wp-block-create-block-listblock {
 	border: 1px dotted #f00;
 }
+
+.my-list-item  {
+	max-width:90%;
+}
